--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.1",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -17,11 +19,13 @@
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.0",
     "lucide-react": "^0.290.0",
+    "micro": "^10.0.1",
     "next": "14.0.0",
     "postcss": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "stripe": "^18.2.1",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.2.2",
