--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/uuid": "^9.0.0",
+    "@types/web-push": "^3.6.4",
     "autoprefixer": "^10.4.0",
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.0",
@@ -30,7 +31,8 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.2.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "eslint": "^8.51.0",
