--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,6 +8,21 @@
   "theme_color": "#2563eb",
   "orientation": "portrait",
   "scope": "/",
+  "prefer_related_applications": false,
+  "shortcuts": [
+    {
+      "name": "Staff Portal",
+      "short_name": "Portal",
+      "description": "Open staff portal directly",
+      "url": "/staff-portal-a8f3e2b1c9d7e4f6",
+      "icons": [
+        {
+          "src": "/zek-surf-icon.ico",
+          "sizes": "48x48"
+        }
+      ]
+    }
+  ],
   "icons": [
     {
       "src": "/zek-surf-icon.ico",
@@ -17,15 +32,20 @@
     {
       "src": "/zek-surf.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/zek-surf.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "categories": ["business", "productivity"],
   "lang": "en-US",
-  "dir": "ltr"
+  "dir": "ltr",
+  "launch_handler": {
+    "client_mode": "focus-existing"
+  }
 } 
