--- a/public/manifest.json
+++ b/public/manifest.json
@@ -25,19 +25,19 @@
   ],
   "icons": [
     {
-      "src": "/staff-icon-180.svg",
+      "src": "/staff-icon-180.svg?v=3",
       "sizes": "192x192",
       "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "/staff-icon-180.svg",
+      "src": "/staff-icon-180.svg?v=3",
       "sizes": "512x512",
       "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "/staff-icon-180.svg",
+      "src": "/staff-icon-180.svg?v=3",
       "sizes": "180x180",
       "type": "image/svg+xml"
     }
