--- a/public/manifest.json
+++ b/public/manifest.json
@@ -25,21 +25,21 @@
   ],
   "icons": [
     {
-      "src": "/staff-icon-180.svg?v=3",
+      "src": "/staff-icon.png",
       "sizes": "192x192",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/staff-icon-180.svg?v=3",
+      "src": "/staff-icon.png",
       "sizes": "512x512",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/staff-icon-180.svg?v=3",
+      "src": "/staff-icon.png",
       "sizes": "180x180",
-      "type": "image/svg+xml"
+      "type": "image/png"
     }
   ],
   "categories": ["business", "productivity"],
