--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.2.0",
     "@types/uuid": "^9.0.0",
     "@types/web-push": "^3.6.4",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.0",
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.0",
